src/tournaments.scss
// Tournament list
a.tournaments-list-result {
    background: $lightSurface;
    color: $onSurface;
    &:hover {
        background: $lighterSurface;
    }
    .tournaments-list-result__players-max,
	.tournaments-list-result__championship,
	.tournaments-list-result__playerstatus,
    .tournaments-list-result__date,
    .tournaments-list-result__date span,
    .tournaments-list-result__gamemode span {
        color: $onSurface;
    }
}

.tournaments-list-filters label:hover {
    color: $lightPrimary;
}

.tournaments-list-result__players {
	background: transparent;
}

// Tournament detail (presentation)
.tournaments-presentation {
    background-color: $surface;
    color: $onSurface;
    .tournaments-presentation-status__global,
    .tournaments-mode-presentation__name,
    .tournaments-mode-presentation__description {
        color: $onSurface;
    }
    a {
        color: $primary;
        &:hover {
            color: $lightPrimary;
        }
    }
}

// Tournament detail (bracket / encounters)
#tournament-module .v2tournament {
    background: $surface;

    h4 {
        background: $darkPrimary;
    }

    .v2tournament__players-stats-table {
        tr:nth-child(2n+1) td {
            background: $lighterSurface;
        }
        td {
            background: $lightSurface;
        }
    }

    .v2tournament__encounters-step {
        background: $lightSurface;

        &:nth-child(2n+1) {
            background: $lighterSurface;
        }

        .v2tournament__encounters-step-title {
            background: $darkPrimary;

            &::after {
                border-left-color: $darkPrimary;
            }
        }

        .v2tournament__encounter-wrapper {
            background: $surface;

            a.v2tournament__encounter-title {
                background: $darkPrimary;
                color: $onSurface;
            }

            .v2tournament__encounter-player-points,
            .v2tournament__encounter-player-result {
                color: $onSurface;
            }

            .v2tournament__encounter-player.highlighted {
                background-color: $lighterSurface;
            }
        }
    }
}

// Create tournament
#newtournament-module #createnewtournament {
    .row-data .row-label {
        color: $onSurface;
    }
    .form-hint {
        color: $onSurface;
    }
}

// Tournament agenda
.agenda-tournament-list-category, .agenda-tournament-list__title, .agenda-tournament-list__players-num {
    color: $onSurface;
}

